# hydra-v3

./: .env.example  .gitignore  AI-MEMORY.md  Cargo.toml  Makefile  README.md  docker-compose.yml  hydra.toml  phase.toml
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md
.github/workflows/: ci.yml  opencode.yml
AI-MEMORY/: CONTEXT.md
hydra-ai/: Cargo.toml
hydra-ai/src/: cache.rs  client.rs  lib.rs  prompt.rs  scorer.rs
hydra-core/: Cargo.toml
hydra-core/src/: config.rs  constants.rs  error.rs  lib.rs  position.rs  signal.rs  traits.rs  types.rs
hydra-executor/: Cargo.toml
hydra-executor/src/: executor.rs  fee.rs  lib.rs  retry.rs  shield.rs  tpu.rs  transaction.rs
hydra-monitor/: Cargo.toml
hydra-monitor/src/: alerts.rs  journal.rs  lib.rs  metrics.rs  telegram.rs
hydra-phases/: Cargo.toml
hydra-phases/src/: lib.rs  manager.rs  phase.rs  tracker.rs
hydra-risk/: Cargo.toml
hydra-risk/src/: circuit_breaker.rs  daily_limits.rs  error.rs  guard.rs  lib.rs  position_manager.rs
hydra-strategy/: Cargo.toml
hydra-strategy/src/: filter.rs  filters.rs  lib.rs  scorer.rs  tpsl.rs
hydra-stream/: Cargo.toml
hydra-stream/src/: lib.rs  parser.rs  pipeline.rs  reconnect.rs  source.rs
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboards.yml  hydra-dashboard.json
