[workspace]
resolver = "2"
members = [
    "hydra-core",
    "hydra-stream",
    "hydra-ai",
    "hydra-strategy",
    "hydra-executor",
    "hydra-risk",
    "hydra-monitor",
    "hydra-phases",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
prometheus-client = "0.22"
axum = "0.7"
tokio-util = { version = "0.7", features = ["full"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
config = "0.14"
thiserror = "1"
async-trait = "0.1"
