[workspace]
resolver = "2"
members = [
    "hydra-core",
    "hydra-stream",
    "hydra-ai",
    "hydra-strategy",
    "hydra-executor",
    "hydra-risk",
    "hydra-monitor",
    "hydra-phases",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hydra Team"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
prometheus = "0.13"
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
