[package]
name = "hydra-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hydra-core = { path = "../hydra-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
