[package]
name = "hydra-phases"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hydra-core = { path = "../hydra-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
