[package]
name = "hydra-strategy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hydra-core = { path = "../hydra-core" }
hydra-ai = { path = "../hydra-ai" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
